2003-02-20  Chris Blumenberg  <cblu@apple.com>

	Added _web_superviewOfClass:stoppingAtClass:. Climbs up hierarchy and returns nil when stoppingAtClass is hit.

        Reviewed by darin.

        * Misc.subproj/WebNSViewExtras.h:
        * Misc.subproj/WebNSViewExtras.m:
        (-[NSView _web_superviewOfClass:stoppingAtClass:]):
        (-[NSView _web_superviewOfClass:]):

2003-02-20  Ken Kocienda  <kocienda@apple.com>

        Reviewed by David

        Modified to use new WebFoundation API. Though there seem to be
        many changes, they are all "uninteresting" in that the changes
        only moved code to use new method and class names.

        * Downloads.subproj/WebDownload.h:
        * Downloads.subproj/WebDownload.m:
        (-[WebDownload initWithRequest:delegate:]):
        (-[WebDownload _initWithLoadingHandle:request:response:delegate:]):
        (-[WebDownload createFileIfNecessary]):
        * Downloads.subproj/WebDownloadPrivate.h:
        * Misc.subproj/WebIconLoader.h:
        * Misc.subproj/WebIconLoader.m:
        (-[WebIconLoader startLoading]):
        (-[WebIconLoader resourceDidFinishLoading:]):
        (-[WebIconLoader resource:willSendRequest:]):
        (-[WebIconLoader resource:didReceiveResponse:]):
        (-[WebIconLoader resource:didReceiveData:]):
        (-[WebIconLoader resource:didFailLoadingWithError:]):
        * Misc.subproj/WebResourceResponseExtras.h:
        * Misc.subproj/WebResourceResponseExtras.m:
        (-[WebHTTPResponse suggestedFilenameForSaving]):
        * Plugins.subproj/WebBaseNetscapePluginStream.h:
        * Plugins.subproj/WebBaseNetscapePluginStream.m:
        (-[WebBaseNetscapePluginStream setResponse:]):
        * Plugins.subproj/WebBaseNetscapePluginView.m:
        (-[WebBaseNetscapePluginView sendEvent:]):
        (-[WebBaseNetscapePluginView requestWithURLCString:]):
        (-[WebBaseNetscapePluginView loadPluginRequest:]):