@@ -79,8 +79,8 @@
 "Mozilla/4.0 (compatible; MSIE 5.2; Mac_PowerPC) AppleWebKit/%@"
 "Mozilla/4.0 (compatible; MSIE 6.0; Windows NT) AppleWebKit/%@ %@"
 "Mozilla/4.0 (compatible; MSIE 6.0; Windows NT) AppleWebKit/%@"
-"Mozilla/5.0 (Macintosh; U; PPC Mac OS X; %@) AppleWebKit/%@ (like Gecko) %@"
-"Mozilla/5.0 (Macintosh; U; PPC Mac OS X; %@) AppleWebKit/%@ (like Gecko)"
+"Mozilla/5.0 (Macintosh; U; PPC Mac OS X; %@) AppleWebKit/%@ (KHTML, like Gecko) %@"
+"Mozilla/5.0 (Macintosh; U; PPC Mac OS X; %@) AppleWebKit/%@ (KHTML, like Gecko)"
 "NETSCAPE2"
 "NP_GetEntryPoints"
 "NP_Initialize"
