@@ -1,3 +1,12 @@
+2003-02-25  Darin Adler  <darin@apple.com>
+
+        Reviewed by John.
+
+        - fixed 3176962 -- add KHTML somewhere in the user agent string
+
+        * English.lproj/StringsNotToBeLocalized.txt: Change "(like Gecko)" to "(KHTML, like Gecko)".
+        * WebView.subproj/WebController.m: (-[WebController userAgentForURL:]): Ditto.
+
 2003-02-20  Chris Blumenberg  <cblu@apple.com>
 
 	Added _web_superviewOfClass:stoppingAtClass:. Climbs up hierarchy and returns nil when stoppingAtClass is hit.
